# rust_aws_api

./: .gitignore  README.md  cdk.json  package-lock.json  package.json
lambda/api/: Cargo.toml
lambda/api/src/: lib.rs
lib/: rust_api_aws-stack.ts
test/: rust_api_aws.test.ts
