[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1"
poem-openapi = { version = "1", features = ["swagger-ui"]}
tokio = { version = "1", features = ["full"] }
poem-lambda = "1"
serde = "1"
serde_json = "1"
# tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"
